--- a/ExpressionParser/ExpressionParser.vcxproj
+++ b/ExpressionParser/ExpressionParser.vcxproj
@@ -166,7 +166,7 @@
     <ClCompile Include="ConfigParser.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Node.cpp" />
-    <ClCompile Include="Source.cpp" />
+    <ClCompile Include="Evaluator.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Header\ConfigParser.h" />
