--- a/ExpressionParser/ExpressionParser.vcxproj.filters
+++ b/ExpressionParser/ExpressionParser.vcxproj.filters
@@ -24,7 +24,7 @@
     <ClCompile Include="Node.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Source.cpp">
+    <ClCompile Include="Evaluator.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
